--- a/www/index.html
+++ b/www/index.html
@@ -20,9 +20,12 @@
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
+    <!-- Controllers -->
     <script src="js/controllers/search/search.js"></script>
     <script src="js/controllers/settings/settings.js"></script>
+    <script src="js/controllers/weather/weather.js"></script>
     <script src="js/controllers/side-menu/left_side_menu.js"></script>
+    <!-- Factories -->
     <script src="js/factories/settings.js"></script>
     <script src="js/factories/locations.js"></script>
   </head>
