Add ngCordova and geolocation plugin

--- a/www/index.html
+++ b/www/index.html
@@ -34,7 +34,8 @@
     <!-- Filters -->
     <script src="js/filters/filters.js"></script>
 
-  </head>
+  
+<script src="lib/ngCordova/dist/ng-cordova.js"></script></head>
   <body ng-app="App">
     <ion-side-menus>
 
@@ -57,18 +58,16 @@
 
         <ion-content>
           <ion-list>
-            <ion-item class="item-icon-left" ui-sref="search" menu-close>
+            <ion-item class="item-icon-left" ui-sref="search" menu-close="">
               <span class="icon ion-search">
               </span> Find a City
             </ion-item>
-            <ion-item class="item-icon-left" ui-sref="settings" menu-close>
+            <ion-item class="item-icon-left" ui-sref="settings" menu-close="">
               <span class="icon ion-ios-cog">
               </span> Settings
             </ion-item>
             <ion-item class="item-divider">Favorites</ion-item>
-            <ion-item class="item-icon-left" 
-              ui-sref="weather({city: location.city,lat: location.lat, lng: location.lng})" 
-              menu-close ng-repeat= "location in locations">
+            <ion-item class="item-icon-left" ui-sref="weather({city: location.city,lat: location.lat, lng: location.lng})" menu-close="" ng-repeat="location in locations">
               <span class="icon ion-ios-location"></span> 
               {{location.city}}
             </ion-item>
