Add integration tests

--- a/www/index.html
+++ b/www/index.html
@@ -58,7 +58,7 @@
 
         <ion-content>
           <ion-list>
-            <ion-item class="item-icon-left" ui-sref="search" menu-close="">
+            <ion-item class="item-icon-left find-city" ui-sref="search" menu-close="">
               <span class="icon ion-search">
               </span> Find a City
             </ion-item>
